// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifGrid.js Debe mostrar items cuando se cargan imagenes (useFetchGifs) 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__zoomIn"
  >
    Back to the future
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    LOADING...
  </p>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="The gif"
      url="http://localhost:3000/img.png"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en GifGrid.js Debe mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__zoomIn"
  >
    Back to the future
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    LOADING...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
